# openlearn

./: .env.example  .gitignore  Dockerfile  Dockerfile.hf  Dockerfile.space  README.md  design.md  docker-compose.yml  pnpm-workspace.yaml  render.yaml  requirements.txt  run_server.py  start.sh  vercel.json
.github/workflows/: deploy-backend.yml  deploy.yml
.netlify/: netlify.toml  state.json
ai-service/: Dockerfile  Dockerfile.hf  __init__.py  auth.py  db.py  hf_inference.py  main.py  railway.json  render.yaml  requirements.txt  schemas.py  start.py  zeabur.toml
ai-service/routers/: __init__.py  ai.py  cards.py  decks.py  reviews.py
backend/: Cargo.toml  Dockerfile  openlearn.db
backend/src/: main.rs
frontend/: .gitignore  Dockerfile  Dockerfile.prod  _worker.js  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  wrangler.toml
frontend/.netlify/: netlify.toml
frontend/.netlify/functions/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/lib/: ai.ts  db.ts  pdf.ts  scheduler.ts
supabase/migrations/: 001_initial_schema.sql
vue-frontend/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
vue-frontend/android/app/: build.gradle
vue-frontend/src/: App.vue  main.ts  style.css
vue-frontend/src/lib/: constants.ts  db.ts  utils.ts
vue-frontend/src/stores/: settings.ts
vue-frontend/src/views/: BookView.vue  DecksView.vue  HomeView.vue  ImportView.vue  NewBookView.vue  SettingsView.vue
(+35 files in other folders)
